feat(server): Setup Supabase client and add health check endpoint
- Integrate Supabase client using environment variables for URL and service role key.
- Add required Supabase environment variables to config and validation.
- Implement a `/api/v1/health/check` endpoint with controller and router.
- Add `@controllers` module alias.
- Add `@supabase/supabase-js` dependency.
- Ignore `docs/` directory in git.

--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
@@ -30,6 +31,7 @@
   "_moduleAliases": {
     "@": "./src",
     "@config": "./src/config",
+    "@controllers": "./src/controllers",
     "@utils": "./src/utils",
     "@_types": "./src/types"
   }
