chore: Standardize file naming and path aliases
- Add .config suffix to configuration files for better clarity
- Add .controller and .route suffixes to respective files
- Add .utils suffix to utility files
- Update import paths to use new aliases
- Add @routes path alias in package.json and tsconfig.json
- Fix import paths to use consistent aliases across files

--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@": "./src",
     "@config": "./src/config",
     "@controllers": "./src/controllers",
+    "@routes": "./src/routes",
     "@utils": "./src/utils",
     "@_types": "./src/types"
   }
